Fixing image not centered

--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 }
 
 #photoDiv{
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 20%;
-    height: auto;
 }
